# advent_of_code_23

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/.devcontainer/: devcontainer.json
2023/: CMakeLists.txt
2023/Day_01/: CMakeLists.txt  Day_01  Day_01.c
2023/Day_02/: CMakeLists.txt  Day_02.c  Day_02_b.c
2023/Day_03/: CMakeLists.txt  Day_03.c
2023/include/: CMakeLists.txt  get_file.c  get_file.h  safe_malloc.h
Day_01/: CMakeLists.txt  Day_01  Day_01.c
Day_01/Day_01.dSYM/Contents/Resources/DWARF/: Day_01
Day_01/Day_01.dSYM/Contents/Resources/Relocations/aarch64/: Day_01.yml
Day_02/: .$advent_2.drawio.bkp  CMakeLists.txt  Day_02  Day_02 copy.c  Day_02.c  Day_02_b.c  README.md  advent_2.drawio  input.txt  tempCodeRunnerFile.c
Day_02/Day_02.dSYM/Contents/: Info.plist
Day_02/Day_02.dSYM/Contents/Resources/DWARF/: Day_02
Day_02/Day_02.dSYM/Contents/Resources/Relocations/aarch64/: Day_02.yml
include/: CMakeLists.txt  safe_malloc.c
lib/: CMakeLists.txt
lib/source/: safe_malloc.c
src/: CMakeLists.txt
src/Day_01/: CMakeLists.txt  README.md  a.out
src/Day_02/: CMakeLists.txt  Day_02.c  Day_02_b
src/Day_03/: CMakeLists.txt  Day_03.c
structures/: hashmap_algos  hashmap_algos.c  hashmap_algos.h
